--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,8 @@ body{
 }
 .inp_box{
     display: flex;
+    flex-direction: column;
+    width: 100%;
     gap: 10px;
 }
 .input_box{
@@ -67,7 +69,7 @@ body{
     gap: 5px;
 }
 .input_n, .ok{
-    width: 120px;
+    width: 100%;
     display: block;
 
     border: none;
@@ -78,6 +80,9 @@ body{
     -webkit-box-shadow: 0px 0px 29px 6px rgba(34, 60, 80, 0.2);
 -moz-box-shadow: 0px 0px 29px 6px rgba(34, 60, 80, 0.2);
 box-shadow: 0px 0px 29px 6px rgba(34, 60, 80, 0.2);
+}
+.ok:hover{
+    background-color: #4FFBDF;
 }
 
 table, th, td {
